Added responsive on navigation bar. Template.html has new classes and division for the Key Group Section.  Added css file for grid build. Added code on main.css to make nav bar occupy 90% of page width

--- a/css/main.css
+++ b/css/main.css
@@ -196,6 +196,10 @@ nav a.navigation:active, nav a.navigation:hover {
   color: #5C3D00;
 }
 
+nav a {
+  width: 90%;
+}
+
 /*GLENN's CODE*/
 
 .colorpalette {
