--- a/css/grid.css
+++ b/css/grid.css
@@ -53,20 +53,24 @@
 	Here we are defining our 20% wide column (for 2 columns of a 10 col grid)
 */
 .col-2of10 {
-	width: 20%;
+	width: 25%;
 }
 
 /*
 	Using further @media queries, we specify that at a width of
 	less than 30em it should collapse the 2/10 columns into one stack
 */
-@media (max-width: 30em) {
+@media (max-width: 35em) {
 
 	.col-2of10 {
 		width: 100%;
 	}
 
 }
+
+
+
+
 
 /*
 	Much like last week, we are clearing the floating items so
@@ -80,3 +84,90 @@
 
 
 
+
+/*HOME
+
+p {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  color: #5C3D00;
+}
+
+p.sideNote {
+  font-size: .9em;
+}
+
+h3.sideTitle {
+  font-family: 'Arvo', cursive;
+  color: #3333CC;
+}
+
+
+/*
+  Here we are defining our 80% wide column (for a 10 col grid)
+
+.col-8of10 {
+  width: 75%;
+}
+
+/*
+  Here using @media queries, we are specifying when the display
+  has a width less than 50em it should collapse the 5/10 columns 
+  into one stack (hence width: 100%)
+
+@media (max-width: 50em) {
+
+  .col-8of10 {
+    width: 100%;
+  }
+
+}
+
+/*
+  Here we are defining our 80% wide column (for a 10 col grid)
+
+.col-3of10 {
+  width: 25%;
+}
+
+/*
+  Here using @media queries, we are specifying when the display
+  has a width less than 50em it should collapse the 5/10 columns 
+  into one stack (hence width: 100%)
+
+@media (max-width: 50em) {
+
+  .col-3of10 {
+    width: 100%;
+  }
+
+}
+
+/*
+  Here we are defining our 80% wide column (for a 10 col grid)
+
+.col-empty {
+  width: 75%;
+}
+
+/*
+  Here using @media queries, we are specifying when the display
+  has a width less than 50em it should collapse the 5/10 columns 
+  into one stack (hence width: 100%)
+
+@media (max-width: 50em) {
+
+  .col-empty {
+    width: 0%;
+  }
+
+}
+
+
+img {
+	height: auto; 
+	width: auto;
+	max-width: 100%;
+	border: 1px solid #888888; 
+}
+*/
