--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ a.button:active {
 /*FORM*/
 
 form {
-  display: inline-block;
+  display: block;
   background-color: rgb(220, 220, 220);
   padding: 1em;
 }
@@ -71,7 +71,7 @@ label.form {
 input.form { 
     font-family: 'Open Sans';
     background-color: #FFFFCC;
-    padding: .4em;
+    padding: 0.4em;
 }
 
 input.form:focus, input.form:hover { 
@@ -81,7 +81,7 @@ input.form:focus, input.form:hover {
 textarea.form{
   font-family: 'Open Sans';
     background-color: #FFFFCC;
-    width: 30em;
+    /*width: 30em; */
     height: 10em;
     padding: .5em;
 }
@@ -92,7 +92,7 @@ textarea.form:focus, textarea.form:hover{
 
 input.form-submit { 
   font-family: 'Arvo', serif;
-  display: inline-block;
+  display: block;
   padding: 0.5em 0.75em;
   color: #E0D1B2;
   background-color: rgb(76,118,163);
@@ -118,6 +118,12 @@ h2.title {
 }
 
 p.textual {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  color: #5C3D00;
+}
+
+p {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   color: #5C3D00;
