--- a/css/main.css
+++ b/css/main.css
@@ -281,3 +281,18 @@ nav a {
 ul.quicklinks li {
   list-style-type: none;
 }
+
+/*LOGO responsive*/
+
+img.logo {
+  height: 300px; 
+  width: 300px;
+  border: 1px solid #888888; 
+}
+
+@media (max-width: 30em) {
+
+  img.logo {
+    width: 100%;
+    height: 250px;
+  }
