--- a/css/grid.css
+++ b/css/grid.css
@@ -24,16 +24,48 @@
 [class^='col-'] {
 	float: left;
 	padding: 0; 
-	text-align: center; /* center the content in this block */
+	/*text-align: center;  center the content in this block */
 }
 
 /*version with things align to the right*/
 [class^='colR-'] {
   float: left;
   padding: 0; 
-  text-align: left; /* center the content in this block */
+  /*text-align: left;  center the content in this block */
 }
 
+
+article {
+  padding: 0em 2em; 
+}
+
+figure {
+  margin: 0;
+}
+
+/* the side titles */
+
+p.sideNote {
+  font-size: .9em;
+}
+
+h3.sideTitle {
+  font-family: 'Arvo', cursive;
+  color: #3333CC;
+}
+
+
+/*
+  Here we are defining our 80% wide column (for a 10 col grid)
+*/
+.col-8of10 {
+  width: 80%;
+}
+
+
+.col-2of10 {
+  width: 20%;
+}
 
 /*
 	Here we are defining our 50% wide column (for a 10 col grid)
@@ -42,45 +74,99 @@
 	width: 50%;
 }
 
-/*
-	Here using @media queries, we are specifying when the display
-	has a width less than 50em it should collapse the 5/10 columns 
-	into one stack (hence width: 100%)
-*/
-@media (max-width: 50em) {
-
-	.col-5of10 {
-		width: 100%;
-	}
-
+.col-7of10 {
+  	width: 70%;
 }
 
 
 /*
-	Here we are defining our 20% wide column (for 2 columns of a 10 col grid)
+	nav specific 25% layouter
+	[TODO] Change to 3of12 when finished editing grid layout
 */
-.col-2of10 {
+nav .col-2of10 {
 	width: 25%;
 }
 
+
+.grid:after {
+	content: "";
+	display: block;
+	clear: both;
+}
+
+img.mainEvent {
+	height: 200; 
+	max-width: 90%;
+	border: 1px solid #888888; 
+}
+
+
 /*
-	Using further @media queries, we specify that at a width of
-	less than 350em it should collapse the 2/10 columns into one stack
+	Using media queries for responsive grid layouts
 */
-@media (max-width: 35em) {
+@media (max-width: 50em) {
+
+	.col-8of10 {
+    width: 100%;
+	}
+
+  	.col-5of10 {
+		width: 100%;
+	}
+
+	.col-3of10 {
+    width: 100%;
+  	}
 
 	.col-2of10 {
 		width: 100%;
 	}
 
+	img.mainEvent {
+	width: 100%;
+	}
+
+	.col-imgof10  {
+    width: 50%;
+  	}
+
+  	.col-7of10 {
+    width: 100%;
+	}
+
+	textarea {
+    width: 100%;
+ 	}
+
 }
 
 /*
-	Much like last week, we are clearing the floating items so
-	that our 'grid' structure can be stacked on others
+  Here we are defining our 80% wide column (for a 10 col grid)
 */
-.grid:after {
-	content: "";
-	display: block;
-	clear: both;
+.col-imgof10 {
+  width: 20%;
+}
+
+@media (max-width: 70em) {
+
+  .col-imgof10  {
+    width: 20%;
+  }
+}
+
+@media (max-width: 25em) {
+
+  .col-imgof10  {
+    width: 100%;
+  }
+
+}
+
+
+img {
+/*	height: auto; 
+  width: auto;*/
+  max-width: 100%;
+  border: 1px solid #888888; 
+	float:left;
 }
