Fixed up responsiveness of Products page

--- a/css/grid.css
+++ b/css/grid.css
@@ -23,7 +23,7 @@
 */
 [class^='col-'] {
 	float: left;
-	padding: 12px; 
+	padding: 12px 1.5em; 
 	/*text-align: center;  center the content in this block */
 }
 
@@ -36,7 +36,7 @@
 
 
 article {
-  padding: 0em 2em; 
+  /*padding: 0em 2em; */
 }
 
 figure {
@@ -59,17 +59,24 @@ h3.sideTitle {
   Here we are defining our 80% wide column (for a 10 col grid)
 */
 .col-8of10 {
-  width: 80%;
+	width: 80%;
 }
 
 
 .col-2of10 {
-  width: 20%;
+	width: 20%;
 }
 
-/*
-	Here we are defining our 50% wide column (for a 10 col grid)
-*/
+.col-2of10 >figure >img{
+	height:auto;
+	width: 100%;
+}
+
+
+.col-3of10 {
+	width: 30%;
+}
+
 .col-5of10 {
 	width: 50%;
 }
@@ -104,7 +111,24 @@ img.mainEvent {
 /*
 	Using media queries for responsive grid layouts
 */
-@media (max-width: 50em) {
+
+@media (max-width: 70em) {
+
+	.col-2of10.thumbnail{
+		height: auto;
+		width: 33%;
+	}
+}
+
+@media (max-width: 55em) {
+
+	.col-2of10.thumbnail{
+		height: auto;
+		width: 50%;
+	}
+}
+
+@media (max-width: 40em) {
 
 	.col-8of10 {
     width: 100%;
@@ -115,14 +139,21 @@ img.mainEvent {
 	}
 
 	.col-3of10 {
-    width: 100%;
+    	width: 100%;
   	}
 
 	.col-2of10 {
 		width: 100%;
 	}
 
+	.col-2of10.thumbnail{
+		height: auto;
+		width: 100%;
+	}
 
+	nav .col-2of10 {
+		width: 100%;
+	}
 
 	img.mainEvent {
 	width: 100%;
@@ -139,25 +170,9 @@ img.mainEvent {
 	textarea {
     width: 100%;
  	}
-
-}
-
-/*
-  Here we are defining our 80% wide column (for a 10 col grid)
-*/
-.col-imgof10 {
-  width: 20%;
-}
-
-@media (max-width: 70em) {
-
-  .col-imgof10  {
-    width: 20%;
-  }
-}
-@media (max-width: 40em) {
-	nav .col-2of10 {
-		width: 100%;
+	
+	.col-2of10.navitem{
+		padding: 0 12px;
 	}
 }
 
