--- a/css/main.css
+++ b/css/main.css
@@ -34,9 +34,9 @@ a.button {
   font-family: 'Arvo', serif;
   display: inline-block;
   padding: 0.5em 0.75em;
-  color: #E0D1B2;
+  color: white;
   background-color: rgb(76,118,163);
-  border-radius: 0.25em;
+  border-radius: 0em;
   text-decoration: none;
   -webkit-transition: background-color 0.2s ease-out;
   transition: background-color 0.2s ease-out;
@@ -70,7 +70,7 @@ label.form {
 
 input.form { 
     font-family: 'Open Sans';
-    background-color: #FFFFCC;
+    background-color: #FEFEFE;
     padding: 0.4em;
 }
 
@@ -80,21 +80,21 @@ input.form:focus, input.form:hover {
 
 textarea.form{
   font-family: 'Open Sans';
-    background-color: #FFFFCC;
+    background-color: #FEFEFE;
     width: 80%; 
     height: 10em;
     padding: 1em;
 }
 
 textarea.form:focus, textarea.form:hover{
-    background-color: #FFFFCC;
+    background-color: #FFFFFF;
 }
 
 input.form-submit { 
   font-family: 'Arvo', serif;
   display: block;
   padding: 0.5em 0.75em;
-  color: #E0D1B2;
+  color: white;
   background-color: rgb(76,118,163);
   border-radius: 0.25em;
   text-decoration: none;
@@ -149,12 +149,12 @@ a.important:active {
 /*IMAGE*/
 
 img.image{
-  width: 25%;
-  height: 25%;
+  /*width: 25%;*/
+  /*height: 25%;*/
 }
 
 figure.gallery {
-  display: inline;
+  /*display: inline;*/
   position: relative;
   margin: 2em 2em 2em 2em; 
 }
