Added placeholder product page

--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ input.form-submit:active{
 
 h2.title {
   font-family: 'Arvo', cursive;
-  color: #3333CC;
+  color: rgb(219,111,80);
 }
 
 p.textual {
