--- a/css/grid.css
+++ b/css/grid.css
@@ -44,7 +44,7 @@ p.sideNote {
 
 h3.sideTitle {
   font-family: 'Arvo', cursive;
-  color: #3333CC;
+  color: rgb(219,111,80);
 }
 
 
@@ -65,17 +65,26 @@ h3.sideTitle {
 .col-11 { width: 91.66%; }
 .col-12 { width: 100%; }
 
+h3 {
+	font-family: 'Arvo', cursive;
+  	color: rgb(219,111,80);
+	margin-top: 0;
+}
 
 .thumbnail >figure >img{
 	height:auto;
 	width: 100%;
 }
 
+.thumbnail{
+	margin-bottom: 1em;
+}
+
 .overlay{
     width: 100%;
     height: 100%;
     /* float: left; */
-    background-color: aqua;
+    background-color: rgb(121,214,214);
     position: absolute; 
     /*align-content: top;*/
     /* vertical-align: top; */
@@ -152,7 +161,7 @@ img.mainEvent {
 
 	.thumbnail{
 		height: auto;
-		width: 100%;
+		width: 50%;
 	}
 
 	nav .col-2 {
@@ -175,7 +184,11 @@ img.mainEvent {
     width: 100%;
 	}
 
-	textarea {
+	.col-10{
+	width: 100%;
+	}
+
+	textarea.form {
     width: 100%;
  	}
 	
