Created new class called 'col-13' to replace col-3 in navigation bar to add Logo image. Logo image added to file. Navigation bar and logo still need better responsive codes.

--- a/css/grid.css
+++ b/css/grid.css
@@ -23,7 +23,8 @@
 */
 [class^='col-'] {
 	float: left;
-	padding: 1px 1.5em; 
+	/* removed to adjust Logo
+	padding: 1px 1.5em;  */ 
 	width: 8.33%; /*default width of 1 column*/
 	position: relative; 
 }
@@ -65,17 +66,22 @@ h3.sideTitle {
 .col-11 { width: 91.66%; }
 .col-12 { width: 100%; }
 
+/*new code to add logo* to navbar*/
+.col-T { width: 20%;}
+.col-R { width: 80%;}
+.col-13 { width: 20%;}
+
 h3 {
 	font-family: 'Arvo', cursive;
   	color: rgb(219,111,80);
 	margin-top: 0;
 }
-
+/*
 .thumbnail >figure >img{
 	height:auto;
 	width: 100%;
 }
-
+*/
 .thumbnail{
 	margin-bottom: 1em;
 }
@@ -195,6 +201,11 @@ img.mainEvent {
 	.col-2.navitem{
 		padding: 0 12px;
 	}
+
+	.navlogo {
+	height: 550px;
+	width: 875px;
+}
 }
 
 @media (max-width: 25em) {
@@ -209,9 +220,9 @@ img.mainEvent {
 
 img {
 /*	height: auto; 
-  width: auto;*/
-  max-width: 100%;
-  border: 1px solid #888888; 
+  width: auto;
+  max-width: 100%; 
+  border: 1px solid #888888; */ 
 	float:left;
 }
 
@@ -220,3 +231,4 @@ img {
 	font-size:0;
 	margin: 0;
 }
+
