--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,8 @@ h2.title {
   color: rgb(219,111,80);
 }
 
+
+
 p.textual {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
@@ -128,6 +130,11 @@ p {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   color: #5C3D00;
+}
+
+p span 
+{
+    display: block;
 }
 
 a.important {
@@ -209,6 +216,33 @@ nav a.navigation:active, nav a.navigation:hover {
   color: #5C3D00;
 }
 
+/*orderHere*/
+nav a.orderHere {
+  font-family: 'Arvo', serif;
+  display: inline-block;
+  color: white;
+  background-color: rgb(219,111,80);
+  font-size: 1.25rem;
+  text-decoration: none;
+
+  margin: 7em 0 0 0; 
+
+  padding: 0.25em 0.45em; 
+
+  -webkit-transition: background-color 0.5s ease-out;
+  transition: background-color 0.5s ease-out;
+}
+
+nav a.orderHere:first-of-type {
+  margin-left: 0;
+}
+
+nav a.orderHere:active, nav a.orderHere:hover {
+  background-color: rgb(163,50,41);
+  color: white;
+}
+/**/
+
 nav a {
   width: 100%;
 }
@@ -289,21 +323,25 @@ ul.quicklinks li {
   list-style-type: none;
 }
 
-/*LOGO responsive*/
-
-img.logo {
-  height: 175px; 
-  width: 288px;
-  /*border: 1px solid #888888;*/ 
-}
 
 @media (max-width: 40em) {
 
   img.logo {
     width: 100%;
-    /*height: 250px;*/
+    height: auto;
+
   }
+
+  nav a.navigation{
+    margin: 0.45em 0 0 0; 
+  }
+
+
+}
 
 .copyright {
     font-weight: 700;
+    font-size: 0.80em;
+    display: block;
+    text-align: center
   }
