--- a/css/grid.css
+++ b/css/grid.css
@@ -1,9 +1,4 @@
 
-/* 
-	This tutorial draws from "Don't Overthink Grids" available at
-	http://css-tricks.com/dont-overthink-it-grids/
-*/
-
 
 /*
 	With this selector, we are specifying that all objects use
@@ -23,7 +18,6 @@
 */
 [class^='col-'] {
 	float: left;
-	 /*removed to adj: ;ust Logo*/
 	padding: 0 10px;   
 	width: 8.33%; /*default width of 1 column*/
 	position: relative; 
@@ -88,10 +82,6 @@ h6.date {
 .col-11 { width: 91.66%; }
 .col-12 { width: 100%; }
 
-/*new code to add logo* to navbar that divides
-the 12 columns into 5 equal column (2.4 times 5 = 12) the*/
-.col-2o4 { width: 20%;}
-
 h3 {
 	font-family: 'Arvo', cursive;
   	color: rgb(219,111,80);
@@ -136,7 +126,13 @@ h3 {
 	width: 25%;
 }*/
 
-
+hr {
+	border: 0;
+	width: 90%;
+	color: #5C3D00;
+	background-color: #5C3D00;
+	height: 1px;
+}
 
 .grid:after {
 	content: "";
@@ -169,6 +165,72 @@ img.mainEvent {
 		height: auto;
 		width: 50%;
 	}
+}
+
+img.logo {
+/*	height: auto; 
+  width: auto;
+  max-width: 100%; 
+  border: 1px solid #888888; */ 
+    max-width: 875px;
+    width: 100%;
+    height: auto;
+    float: right;
+	vertical-align: bottom;
+}
+
+
+
+
+
+
+img.mainEvent {
+	width: 90%;
+	display: block;
+    /*margin-left: auto;*/
+    margin-right: auto;
+	}
+
+.navitem {
+	padding:0;
+	font-size:0;
+	margin: 0;
+}
+
+.flavour {
+	display: block;
+    /*margin-left: auto;*/
+	}
+
+.type {
+	display: block;
+}
+
+.col-3.logo {
+	width: 25%;
+}
+
+img.logo {
+	width:300px;
+	float:left;
+
+	-webkit-transition: width 0.4s ease-out;
+  	transition: width 0.4s ease-out;
+}
+
+.col-2.navitem {
+	float: right;
+}
+
+@media (max-width: 60em) {
+	img.logo {
+		width:200px;
+	}
+
+	nav a.navigation{
+		margin: 4em 0 0 0;
+	}
+
 }
 
 @media (max-width: 40em) {
@@ -237,7 +299,19 @@ img.mainEvent {
 		width: 100%;
 	}
 
-}
+	img.logo {
+		width: 50%;
+		float: none;
+	}
+
+	.col-3.logo {
+		text-align: center;
+
+	}
+
+	nav a.navigation{
+		margin: .45em 0 0 0;
+	}
 	
 
 }
@@ -251,37 +325,3 @@ img.mainEvent {
 
 }
 
-
-img.logo {
-/*	height: auto; 
-  width: auto;
-  max-width: 100%; 
-  border: 1px solid #888888; */ 
-    max-width: 875px;
-    width: 100%;
-    height: auto;
-    float: right;
-	vertical-align: bottom;
-}
-
-img.mainEvent {
-	width: 90%;
-	display: block;
-    /*margin-left: auto;*/
-    margin-right: auto;
-	}
-
-.navitem {
-	padding:0;
-	font-size:0;
-	margin: 0;
-}
-
-.flavour {
-	display: block;
-    /*margin-left: auto;*/
-	}
-
-.type {
-	display: block;
-}
