--- a/css/grid.css
+++ b/css/grid.css
@@ -59,13 +59,24 @@ h3.address {
   color: rgb(236,27,36);
 }
 
-h4.orderLabels {
+h4.orderLabelsTop {
   font-family: 'Arvo', cursive;
   color: rgb(236,27,36);
   -webkit-margin-before: -.33em;
   -webkit-margin-after: .33em;
    -webkit-margin-start: 0px;
    -webkit-margin-end: 0px;
+}
+
+h4.orderLabelsSide {
+  font-family: 'Arvo', cursive;
+  color: rgb(236,27,36);
+  -webkit-margin-before: -.33em;
+  -webkit-margin-after: .33em;
+   -webkit-margin-start: 0px;
+   -webkit-margin-end: 0px;
+   visibility: hidden;
+	opacity: 0;
 }
 
 h4.addressLocation {
@@ -170,6 +181,26 @@ img.mainEvent {
 		height: auto;
 		width: 33%;
 	}
+	h4.orderLabelsTop{
+		visibility: hidden;
+		opacity: 0;
+	}
+	h4.orderLabelsSide{
+		visibility: hidden ;
+		opacity: 1;
+		margin-bottom: -.8em; 
+		margin-top:-.5em;
+	}
+	.cart{
+		width: 50%;
+		margin-bottom: -.8em; 
+		margin-top:-.5em;
+	}
+	.removeFromCart{
+		width: 50%;
+		margin-bottom: 0em; 
+		margin-top:1em;
+	}
 }
 
 @media (max-width: 55em) {
@@ -246,8 +277,20 @@ img.mainEvent {
 		width: 100%;
 	}
 
+	
 }
 	
+@media (max-width: 60em) {
+	.cart{
+		width: 70%;
+		margin-bottom: -.8em; 
+		margin-top:-.5em;
+	}
+	.removeFromCart{
+		width: 70%;
+		margin-bottom: 0em; 
+		margin-top:1em;
+	}
 
 }
 
