added new class ("contactInfo") to resize the input bars of email and subject to be longer during downsizing the screen into mobile version.

--- a/css/grid.css
+++ b/css/grid.css
@@ -277,6 +277,10 @@ img.mainEvent {
 		width: 100%;
 	}
 
+	.contactInfo{
+		width: 100%;
+	}
+
 	
 }
 	
@@ -298,6 +302,10 @@ img.mainEvent {
 
   .col-img  {
     width: 100%;
+  }
+
+  .contactInfo{
+  	width: 100%;
   }
 	
 
