--- a/css/main.css
+++ b/css/main.css
@@ -9,14 +9,13 @@ TA: Justin Ma
 
 body {
   font-family: 'Open Sans', sans-serif;
-  padding: 1rem 2rem;
+  padding: .5rem 2rem;
   background-color: rgb(246,246,226);
 }
 
 section {
   margin: 0 0 1em;
   padding: 0.5em 0;
-  /*border-top: 1px solid #333;*/
 }
 section h3 {
   margin-bottom: 0;
@@ -28,10 +27,34 @@ section code {
   background-color: #EEE;
   padding: 0.5em 0.75em;
 }
-
 section#footer{
-  border-top: 1px solid #333;
+  margin: 0.5em auto;
+  width: 90%;
+  border-top: 1px solid #5C3D00;
   clear: both;
+}
+
+section:first-of-type {
+  padding-top: 0;
+}
+
+/*LINKS DEFAULT*/
+a {
+  text-decoration: inherit;
+  font-style: inherit;
+  color: inherit;
+}
+
+a:link, a:visited {
+ border:none;
+ text-decoration:underline;
+ font-style:normal;
+ color: rgb(6,127,180);
+}
+
+a:hover {
+ text-decoration: none;
+ color: rgb(236,27,36);
 }
 
 /*BUTTON*/
@@ -207,6 +230,7 @@ nav a.navigation {
   color: white;
   /*background-color: rgb(76,118,163); old colour*/
   background-color: rgb(6,127,180);
+  /*background-color: rgb(45,75,145);*/
   font-size: 1.25rem;
   text-decoration: none;
 
@@ -230,23 +254,31 @@ nav a.navigation:active, nav a.navigation:hover {
   color: #5C3D00;
 }
 
-/*orderHere*/
-nav a.orderHere {
+nav a.selected {
   background-color: rgb(236,27,36);
+  font-weight: bold;
+}
+
+
+nav a.selected:active, nav a.selected:hover {
+  background-color: rgb(163,50,41);
+  color: white;
+}
+
+nav a.orderHere {
+  background-color: rgb(45,75,145);
 }
 
 
 nav a.orderHere:active, nav a.orderHere:hover {
-  background-color: rgb(163,50,41);
+  background-color: rgb(121,214,214);
   color: white;
 }
-/**/
 
 nav a {
   width: 100%;
 }
 
-/*GLENN's CODE*/
 
 .colorpalette {
   display: inline-block;
@@ -343,24 +375,6 @@ ul.quicklinks li {
   }
 
 
-}
-
-a {
-  text-decoration: inherit;
-  font-style: inherit;
-  color: inherit;
-}
-
-a:link, a:visited {
- border:none;
- text-decoration:underline;
- font-style:normal;
- color: rgb(6,127,180);
-}
-
-a:hover {
- text-decoration: none;
- color: rgb(236,27,36);
 }
 
 .copyright {
